# yangipcclient

./: readme.md
android/yangipcclient8_android/: local.properties  settings.gradle
android/yangipcclient8_android/app/: build.gradle
flutter/yangipcclient8/: README.md  pubspec.yaml
flutter/yangipcclient8/android/: gradle.properties  local.properties
flutter/yangipcclient8/android/app/: build.gradle
flutter/yangipcclient8/ios/: Podfile
flutter/yangipcclient8/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
flutter/yangipcclient8/ios/Runner/: AppDelegate.h  AppDelegate.m  Info.plist  YangIosRender.m  YangNativePlugin.h  YangNativePlugin.m  YangOpenGLFactory.h  YangOpenGLFactory.m  YangOpenGLView.h
flutter/yangipcclient8/ios/Runner.xcodeproj/: project.pbxproj
flutter/yangipcclient8/lib/: YangChannel.dart  YangConfig.dart  main.dart
flutter/yangipcclient8/test/: widget_test.dart
html/: index_mqtt_hd.html
html/js/: ipc_hd.mqtt.sdk.js  yangdef.js  yangmqtt.js
ios/yangipcclient8/lib/yangclient8.framework/: Info.plist
ios/yangipcclient8/yangipcclient8/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  YangGlView.h  YangGlView.m  YangIosClient.h  YangIosClient.m  YangIosRender.h  YangIosRender.m  main.m
ios/yangipcclient8/yangipcclient8.xcodeproj/: project.pbxproj
ios/yangipcclient8/yangipcclient8/Base.lproj/: Main.storyboard
linux/yangipcclient8/: YangIpcPlayer.h  mainwindow.h  mainwindow.ui  yangipcclient8.pro
linux/yangipcclient8/video/: yangrecordthread.h
mac/yangipcclient8/: CMakeLists.txt  Info.plist.in  main.cpp  mainwindow.cpp  mainwindow.h
mac/yangipcclient8/lib/yangclient8.framework/: yangclient8
mac/yangipcclient8/lib/yangclient8.framework/Versions/A/Headers/: yangclient8.h
mac/yangipcclient8/lib/yangclient8.framework/Versions/A/Resources/: Info.plist
mac/yangipcclient8/lib/yangclient8.framework/Versions/A/_CodeSignature/: CodeResources
mac/yangipcclient8/video/: yangrecordthread.cpp  yangrecordthread.h  yangrequest.h  yangrequest.mm
mac/yangipcclient8/yangplayer/: YangPlayWidget.h
react_native/: readme_rn.md
react_native/yangipcclient8/: App.tsx  YangConfig.js  app.json  package-lock.json  package.json
react_native/yangipcclient8/android/: build.gradle  settings.gradle
react_native/yangipcclient8/android/app/: build.gradle
react_native/yangipcclient8/ios/: Podfile  YangIosRender.h  YangOpenGLView.m  YangViewManager.h  YangViewManager.mm
react_native/yangipcclient8/ios/yangipcclient8/: AppDelegate.mm  (+2 more)
win/yangipcclient8/: YangIpcPlayerDef.h  main.cpp  mainwindow.cpp  mainwindow.ui  yangipcclient8.pro
win/yangipcclient8/video/: yangrecordthread.cpp
(+39 files in other folders)
